--- a/style.css
+++ b/style.css
@@ -1,50 +1,27 @@
 :root {
-	--main-background: white;
-	--main-color: black;
-	--sidebar-background: #e3e3e3;
-	--expander-background: #b5b5b5;
-	--expander-background-hover: #a6a6a6;
-	--expander-border: #6c6c6c;
+	--main-background: #212529;
+	--main-color: #f8f9fa;
+	--sidebar-background: #131618;
+	--expander-background: #424446;
+	--expander-background-hover: #2a2d2f;
+	--button-background: #282879;
+	--button-background-hover: #00007c;
+	--button-border: #131618;
+	--danger-button-background: #b20000;
+	--danger-button-background-hover: red;
+	--danger-button-border: #131618;
+	--green: #53b266;
+	--gray: #979797;
 
-	--button-color: #eff7ef;
-	--button-background: #545499;
-	--button-background-hover: #00007C;
-	--button-border: #e3e3e3;
-
-	--danger-button-color: #eff7ef;
-	--danger-button-background: #db2626;
-	--danger-button-background-hover: #B20000;
-	--danger-button-border: #e3e3e3;
-
-	--green: green;
-	--gray: #4a4a4a;
-}
-
-@media (prefers-color-scheme: dark) {
-	:root {
-		--main-background: #212529;
-		--main-color: #f8f9fa;
-		--sidebar-background: #131618;
-		--expander-background: #424446;
-		--expander-background-hover: #2a2d2f;
-		--button-background: #282879;
-		--button-background-hover: #00007C;
-		--button-border: #131618;
-		--danger-button-background: #B20000;
-		--danger-button-background-hover: red;
-		--danger-button-border: #131618;
-		--green: #53b266;
-		--gray: #979797;
-
-		--red: #fb615b;
-	}
+	--red: #fb615b;
 }
 
 html {
 	scrollbar-color: #8e8e8e transparent;
 }
 
-html, body {
+html,
+body {
 	height: 100%;
 	padding: 0;
 	margin: 0;
@@ -91,7 +68,8 @@ button.danger:hover {
 	background: var(--danger-button-background-hover);
 }
 
-#buffer, #connect {
+#buffer,
+#connect {
 	color: var(--main-color);
 	background: var(--main-background);
 	width: 100%;
@@ -100,7 +78,8 @@ button.danger:hover {
 	overflow-y: auto;
 }
 
-#buffer-list, #member-list {
+#buffer-list,
+#member-list {
 	color: var(--main-color);
 	background: var(--main-background);
 	width: 100%;
@@ -323,7 +302,8 @@ button.danger:hover {
 	box-sizing: border-box;
 	padding: 10px;
 }
-#composer input, #composer input:focus {
+#composer input,
+#composer input:focus {
 	border: none;
 	background: none;
 	outline: none;
@@ -357,13 +337,18 @@ form input[type="email"] {
 a {
 	color: var(--green);
 }
-#buffer-list li a, a.timestamp, a.nick {
+#buffer-list li a,
+a.timestamp,
+a.nick {
 	color: var(--gray);
 	text-decoration: none;
 }
-#buffer-list li a:hover, #buffer-list li a:active,
-a.timestamp:hover, a.timestamp:active,
-a.nick:hover, a.nick:active {
+#buffer-list li a:hover,
+#buffer-list li a:active,
+a.timestamp:hover,
+a.timestamp:active,
+a.nick:hover,
+a.nick:active {
 	text-decoration: underline;
 }
 
@@ -383,7 +368,8 @@ details summary[role="button"] {
 #buffer .logline {
 	white-space: pre-wrap;
 }
-#buffer .talk, #buffer .motd {
+#buffer .talk,
+#buffer .motd {
 	color: var(--main-color);
 }
 #buffer .error {
@@ -452,7 +438,8 @@ details summary[role="button"] {
 	text-transform: lowercase;
 	font-variant: small-caps;
 }
-#buffer .separator::before, #buffer .separator::after {
+#buffer .separator::before,
+#buffer .separator::after {
 	content: "";
 	flex: 1;
 	border-bottom: 1px solid transparent;
@@ -460,13 +447,15 @@ details summary[role="button"] {
 #buffer .date-separator {
 	color: #757575;
 }
-#buffer .date-separator::before, #buffer .date-separator::after {
+#buffer .date-separator::before,
+#buffer .date-separator::after {
 	border-color: #ddd;
 }
 #buffer .unread-separator {
 	color: #ff3535;
 }
-#buffer .unread-separator::before, #buffer .unread-separator::after {
+#buffer .unread-separator::before,
+#buffer .unread-separator::after {
 	border-color: #ff3535;
 }
 
@@ -480,7 +469,8 @@ details summary[role="button"] {
 	margin: 0.5rem;
 }
 
-#error-msg button, .dialog button.dialog-close {
+#error-msg button,
+.dialog button.dialog-close {
 	border: none;
 	background: transparent;
 	color: inherit;
@@ -548,162 +538,165 @@ kbd {
 	border-radius: 3px;
 }
 
-@media (prefers-color-scheme: dark) {
-	html {
-		scrollbar-color: var(--gray) transparent;
-	}
-
-	#buffer-list li.active a {
-		color: var(--sidebar-background);
-		background-color: white;
-	}
-	#buffer-list li.unread-message a {
-		color: var(--green);
-	}
-	#buffer-list li.unread-highlight a {
-		color: #0062cc;
-	}
-
-	#buffer-header .status-gone {
-		color: #fb885b;
-	}
-	#buffer-header .status-offline {
-		color: var(--red);
-	}
-
-	form input[type="text"],
-	form input[type="username"],
-	form input[type="password"],
-	form input[type="url"],
-	form input[type="email"] {
-		color: #ffffff;
-		background: var(--sidebar-background);
-		border: 1px solid #495057;
-		padding: 0.25rem 0.375rem;
-	}
-	form input[type="text"]:focus,
-	form input[type="username"]:focus,
-	form input[type="password"]:focus,
-	form input[type="url"]:focus,
-	form input[type="email"]:focus {
-		outline: 0;
-		border-color: #3897ff;
-	}
-
-	#buffer-list li a,
-	a.nick {
-		color: var(--main-color);
-	}
-
-	#buffer {
-		background: var(--main-background);
-	}
-	#buffer .error {
-		color: var(--red);
-	}
-	#buffer .me-tell {
-		color: #e16b97;
-	}
-	#buffer .highlight .nick {
-		color: #1e0010;
-		background-color: #0062cc;
-	}
-
-	#buffer .date-separator {
-		color: #757575;
-	}
-
-	#buffer .date-separator::before,
-	#buffer .date-separator::after {
-		border-color: #373737;
-	}
-	#buffer .unread-separator {
-		color: var(--green);
-	}
-	#buffer .unread-separator::before,
-	#buffer .unread-separator::after {
-		border-color: var(--green);
-	}
-
-	#error-msg {
-		color: black;
-		background-color: #efa3aa;
-	}
-
-	#error-msg a {
-		color: black;
-	}
-
-	.error-text {
-		color: #efa3aa;
-	}
-
-	#buffer .nick-8 {
-		color: #6bccc7;
-	}
-	#buffer .nick-10 {
-		color: #6296c1;
-	}
-	#buffer .nick-11 {
-		color: #c6b5df;
-	}
-	#buffer .nick-12 {
-		color: #9995df;
-	}
-	#buffer .nick-13 {
-		color: #8b62b3;
-	}
-	#buffer .nick-15 {
-		color: #e3418b;
-	}
-
-	kbd {
-		--outline-color: #6e7681;
-
-		background-color: transparent;
-		border: 1px solid var(--outline-color);
-		box-shadow: inset 0 -1px 0 var(--outline-color);
-	}
+/* @media (prefers-color-scheme: dark) { */
+html {
+	scrollbar-color: var(--gray) transparent;
 }
 
-@media (max-width: 640px) {
-	.expander {
-		display: block;
-	}
-
-	#buffer-list ul, #member-list > section {
-		width: 0px;
-	}
-
-	#buffer-list.expand, #member-list.expand {
-		z-index: 999;
-		grid-column-start: 1;
-		grid-column-end: 4;
-	}
-
-	#buffer-list.expand ul {
-		width: auto;
-	}
-
-	#member-list.expand > section {
-		width: 100%;
-	}
-
-	#member-list-header {
-		border-left: none;
-	}
-
-	#buffer-header {
-		grid-template-columns: 1fr min-content;
-	}
-
-	#buffer-header .title {
-		display: block;
-	}
+#buffer-list li.active a {
+	color: var(--sidebar-background);
+	background-color: white;
 }
+#buffer-list li.unread-message a {
+	color: var(--green);
+}
+#buffer-list li.unread-highlight a {
+	color: #0062cc;
+}
+
+#buffer-header .status-gone {
+	color: #fb885b;
+}
+#buffer-header .status-offline {
+	color: var(--red);
+}
+
+form input[type="text"],
+form input[type="username"],
+form input[type="password"],
+form input[type="url"],
+form input[type="email"] {
+	color: #ffffff;
+	background: var(--sidebar-background);
+	border: 1px solid #495057;
+	padding: 0.25rem 0.375rem;
+}
+form input[type="text"]:focus,
+form input[type="username"]:focus,
+form input[type="password"]:focus,
+form input[type="url"]:focus,
+form input[type="email"]:focus {
+	outline: 0;
+	border-color: #3897ff;
+}
+
+#buffer-list li a,
+a.nick {
+	color: var(--main-color);
+}
+
+#buffer {
+	background: var(--main-background);
+}
+#buffer .error {
+	color: var(--red);
+}
+#buffer .me-tell {
+	color: #e16b97;
+}
+#buffer .highlight .nick {
+	color: #1e0010;
+	background-color: #0062cc;
+}
+
+#buffer .date-separator {
+	color: #757575;
+}
+
+#buffer .date-separator::before,
+#buffer .date-separator::after {
+	border-color: #373737;
+}
+#buffer .unread-separator {
+	color: var(--green);
+}
+#buffer .unread-separator::before,
+#buffer .unread-separator::after {
+	border-color: var(--green);
+}
+
+#error-msg {
+	color: black;
+	background-color: #efa3aa;
+}
+
+#error-msg a {
+	color: black;
+}
+
+.error-text {
+	color: #efa3aa;
+}
+
+#buffer .nick-8 {
+	color: #6bccc7;
+}
+#buffer .nick-10 {
+	color: #6296c1;
+}
+#buffer .nick-11 {
+	color: #c6b5df;
+}
+#buffer .nick-12 {
+	color: #9995df;
+}
+#buffer .nick-13 {
+	color: #8b62b3;
+}
+#buffer .nick-15 {
+	color: #e3418b;
+}
+
+kbd {
+	--outline-color: #6e7681;
+
+	background-color: transparent;
+	border: 1px solid var(--outline-color);
+	box-shadow: inset 0 -1px 0 var(--outline-color);
+}
+/* } */
+
+/* @media (max-width: 640px) { */
+.expander {
+	display: block;
+}
+
+#buffer-list ul,
+#member-list > section {
+	width: 0px;
+}
+
+#buffer-list.expand,
+#member-list.expand {
+	z-index: 999;
+	grid-column-start: 1;
+	grid-column-end: 4;
+}
+
+#buffer-list.expand ul {
+	width: auto;
+}
+
+#member-list.expand > section {
+	width: 100%;
+}
+
+#member-list-header {
+	border-left: none;
+}
+
+#buffer-header {
+	grid-template-columns: 1fr min-content;
+}
+
+#buffer-header .title {
+	display: block;
+}
+/* } */
 
 @media (pointer: none), (pointer: coarse) {
-	#buffer-list li a, #member-list li a {
+	#buffer-list li a,
+	#member-list li a {
 		padding: 7px 10px;
 	}
 }
